fix sticky-footer + navbar collapsing + responsive + tweaks

--- a/css/hunter-home.css
+++ b/css/hunter-home.css
@@ -9,6 +9,17 @@ h6 {
     font-weight: 700;
 }
 
+html,
+body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+#wrapper {
+   min-height:100%;
+   position:relative;
+}
+
 .lead {
     font-size: 18px;
     font-weight: 400;
@@ -72,13 +83,29 @@ h6 {
 
 .navbar-default {
     height: 100px;
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.4);
     border: 0;
+}
+
+.navbar-default .navbar-toggle {
+    padding-top: 60px;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #861001;
 }
 
 .navbar-default .navbar-nav > li > a {
     font-size: 20px;
     color: #861001;    
+}
+
+@media only screen and (max-width: 766px) {
+.collapsing, .in {background-color: #861001;}
+.collapsing ul li a, .in ul li a {text-align: center;}
+.collapsing ul li a, .in ul li a {padding-bottom: 60px;}
+.collapsing ul li a, .in ul li a {color: #fff!important;}
+.collapsing ul li a:hover, .in ul li a:hover {color: #000!important;}
 }
 
 .navbar-default .navbar-nav > li > a:focus,
@@ -100,17 +127,17 @@ h6 {
 /* Footer */
 
 footer {
-    position:fixed;
+    position:absolute;
     bottom:0;
     left:0;
     height: 25px;
     width: 100%;
-    background: rgba(0, 0, 0, 0.1);    
+    background: rgba(0, 0, 0, 0.6);    
 }
 
 p.copyright {
     color: #861001;
-    position: fixed;
+    position: absolute;    
     right: 5%;
 }
 
